syntax = "proto3";

import "events/component/component_events.proto";
import "events/component/request/rpc_mapping.proto";

option java_multiple_files = true;
option java_package = "is.yarr.qilletni.grpc.gen.events.component.lastfm";

service LastFmService {
  rpc Create(LastFmCreateEvent) returns (CreateComponentResponse);
  rpc ChangeSequential(LastFmSequentialChangeEvent) returns (EmptyResponse);
  rpc ChangeLimit(LastFmLimitChangeEvent) returns (EmptyResponse);
  rpc ChangeType(LastFmTypeChangeEvent) returns (EmptyResponse);
}

message LastFmCreateEvent {
  CreateEvent create = 1;
}

message LastFmSequentialChangeEvent {
  ModifyEvent modify = 1;
  bool sequential = 2;
}

message LastFmLimitChangeEvent {
  ModifyEvent modify = 1;
  optional int32 limit = 2;
}

message LastFmTypeChangeEvent {
  ModifyEvent modify = 1;
  LastFmCollectionType collection_type = 2;
}
