syntax = "proto3";

import "events.proto";

option java_multiple_files = true;
option java_package = "is.yarr.qilletni.grpc.gen.events.lastfm";

service LastFm {
  rpc Create(LastFmCreateEvent) returns (CreateComponentResponse);
  rpc ChangeSequential(LastFmSequentialChangeEvent) returns (EmptyResponse);
  rpc ChangeLimit(LastFmLimitChangeEvent) returns (EmptyResponse);
  rpc ChangeType(LastFmTypeChangeEvent) returns (EmptyResponse);
}

enum LastFmCollectionType {
  TOP_TRACKS = 0;
  LOVED_TRACKS = 1;
  TOP_ARTIST = 2;
  TOP_ALBUM = 3;
}

message LastFmCreateEvent {}

message LastFmSequentialChangeEvent {
  ModifyEvent modify = 1;
  bool sequential = 2;
}

message LastFmLimitChangeEvent {
  ModifyEvent modify = 1;
  optional int32 limit = 2;
}

message LastFmTypeChangeEvent {
  ModifyEvent modify = 1;
  LastFmCollectionType collection_type = 2;
}
